@@ -9,7 +9,7 @@ LD versus distance Plot
 Visualization of pairwise Linkage Disequilibrium (LD) estimates generated by function \code{pairwiseLD} versus marker distance. A single plot is generated for every chromosome.
 }
 \usage{
-LDDist(LDdf,chr=NULL,type="p",breaks=NULL,file=NULL,n=NULL,fileFormat="pdf",...)
+LDDist(LDdf,chr=NULL,type="p",breaks=NULL,n=NULL,file=NULL,fileFormat="pdf",oneFile=TRUE,...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -17,7 +17,7 @@ LDDist(LDdf,chr=NULL,type="p",breaks=NULL,file=NULL,n=NULL,fileFormat="pdf",...)
 object of class \code{LDdf} which is the output of function \code{pairwiseLD} and argument \code{type="data.frame"}
 }
   \item{chr}{
-\code{numeric} scalar or vector. Return value is a plot for each chromosome in \code{chr}.
+\code{numeric} scalar or vector. Return value is a plot for each chromosome in \code{chr}. Note: Remember to add in a batch-script one empty line for each chromosome, if you use more than one chromosome!
 }  
   \item{type}{
 Character string to specify the type of plot. Use \code{"p"} for a scatterplot, \code{"bars"} for stacked bars or \code{"nls"} for scatterplot together with nonlinear regression curve according to Hill and Weir (1988). 
@@ -25,14 +25,17 @@ Character string to specify the type of plot. Use \code{"p"} for a scatterplot, 
   \item{breaks}{
 \code{list} containing breaks for stacked bars (optional, only for \code{type="bars"}). Components are \code{dist} with breaks for distance on x-axis and \code{r2} for breaks on for r2 on y-axis. By default, 5 equal spaced categories for dist and r2 are used.  
 }
-  \item{file}{
-\code{character}. path to a file where plot is saved to (optional).
-}
   \item{n}{
 \code{numeric}. Number of observations used to estimate LD. Only required for \code{type="nls"}.
 }
+  \item{file}{
+\code{character}. path to a file where plot is saved to (optional).
+}
   \item{fileFormat}{
 \code{character}. At the moment two file formats are supported: pdf and png. Default is \code{"pdf"}.
+}
+  \item{oneFile}{
+\code{logical}. If \code{fileFormat = "pdf"} you can decide, if you like to have all graphics in one file or in multiple files.
 }
   \item{\dots}{
 Further arguments for \code{plot}
@@ -41,6 +44,9 @@ Further arguments for \code{plot}
 \references{
 For nonlinear regression curve:
 Hill WG, Weir BS (1988) Variances and covariances of squared linkage disequilibria in finite populations. Theor Popul Biol 33:54-78.
+}
+\author{
+ Hans-Juergen Auinger, Theresa Albrecht and Valentin Wimmer
 }
 \seealso{
 \code{\link{pairwiseLD}}, \code{\link{LDMap}}
